--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Django==1.4.3
 South==0.7.6
+boto==2.8.0
 distribute==0.6.31
 dj-database-url==0.2.1
+django-ses==0.4.1
+djorm-ext-pgfulltext==0.7
 gunicorn==0.17.2
 psycopg2==2.4.6
 wsgiref==0.1.2
-boto
-django-ses
