--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==1.4.3
+Embedly==0.4.3
 South==0.7.6
 beautifulsoup4==4.1.3
 boto==2.8.0
@@ -7,6 +8,7 @@ dj-database-url==0.2.1
 django-ses==0.4.1
 djorm-ext-pgfulltext==0.7
 gunicorn==0.17.2
+httplib2==0.7.7
+lxml==3.1.0
 psycopg2==2.4.6
 wsgiref==0.1.2
-lxml
