--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ beautifulsoup4==4.1.3
 boto==2.8.0
 distribute==0.6.31
 dj-database-url==0.2.1
+django-autoslug==1.6.1
 django-ses==0.4.1
 djorm-ext-pgfulltext==0.7
 gunicorn==0.17.2
